--- a/zodiacapp/templates/layout.html
+++ b/zodiacapp/templates/layout.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="jumbotron header_container">
-      <h1><a href='/'>Know Your Zodiac</a></h1>
+      <h1>Know Your Zodiac</h1>
     </header>
     <div class="container2">
       {% block content %}
